# giga

./: .gitignore  DATASETS.md  README.md  download_checkpoint.sh  environment.yml  pyproject.toml
configs/dna/: eval_data.yaml  giga.yaml  texture_data.yaml  train_data_pt2.yaml
configs/mvh/: eval_data.yaml  giga.yaml  incomplete_smplx_chars.txt  texture_data.yaml  train_data.yaml
configs/mvhpp/: eval_data.yaml  texture_data.yaml  train_data.yaml
scripts/: generate_static_textures.py  slurm_train_job.py  test.py  train.py
src/giga/: __init__.py
src/giga/data/: __init__.py  extimage.py
src/giga/data/datasets/: __init__.py  config.py  dna.py  mvh.py  mvhpp.py  neuman.py
src/giga/data/datasets/utils/: __init__.py  character_selection.py  split_manager.py  transforms.py  utils.py
src/giga/engine/: __init__.py
src/giga/engine/body_template/: __init__.py  smplxtex.py
src/giga/engine/evaluator/: __init__.py  evaluator.py  trajectory.py  utils.py
src/giga/engine/loss/: __init__.py  loss.py  norm.py  perceptual.py  reconstruction.py  regularizer.py  ssim.py
src/giga/engine/models/: __init__.py  giga.py
src/giga/engine/projector/: __init__.py  uv_projector.py
src/giga/engine/renderer/: __init__.py  gaussians.py  mesh.py  utils.py
src/giga/engine/trainer/: callbacks.py  config.py  scheduler.py  slurm_utils.py
src/giga/engine/utils/: __init__.py  base.py  camera.py  geometry.py  metrics.py  testing.py
src/giga/geometry/SO3/: __init__.py  axis_angle.py  euler.py  quaternions.py
src/giga/nn/: __init__.py  attention.py  components.py  operations.py
src/giga/nn/models/: __init__.py  mlp.py  multihead_unet.py  parallel_unet.py  unet.py  vit.py
